--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>yupi-interface</module>
         <module>api-back</module>
         <module>yuapi-client-sdk</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
@@ -54,6 +55,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -112,11 +118,6 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.23</version>
                 <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-configuration-processor</artifactId>
-                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
