--- a/yuapi-client-sdk/pom.xml
+++ b/yuapi-client-sdk/pom.xml
@@ -7,7 +7,6 @@
         <groupId>com.yupi</groupId>
         <artifactId>open-api</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.yupi</groupId>
@@ -19,7 +18,19 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+
     <dependencies>
 
     </dependencies>
+
+    <!--springboot的构建工具-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
