--- a/api-back/pom.xml
+++ b/api-back/pom.xml
@@ -19,6 +19,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.yupi</groupId>
             <artifactId>yuapi-client-sdk</artifactId>
             <version>0.0.1-SNAPSHOT</version>
