--- a/yuapi-client-sdk/pom.xml
+++ b/yuapi-client-sdk/pom.xml
@@ -21,7 +21,10 @@
 
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <!--springboot的构建工具-->
