--- a/yupi-interface/pom.xml
+++ b/yupi-interface/pom.xml
@@ -17,6 +17,15 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.yupi</groupId>
             <artifactId>yuapi-client-sdk</artifactId>
             <version>0.0.1-SNAPSHOT</version>
