--- a/yupi-interface/src/main/resources/application.yml
+++ b/yupi-interface/src/main/resources/application.yml
@@ -1,10 +1,25 @@
 spring:
   application:
     name: yupi-interface
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
 server:
   port: 8082
   servlet:
     context-path: /api
+
+dubbo:
+  application:
+    name: dubbo-yupi-interface #不同的服务不同
+  protocol:
+    name: dubbo
+    port: 18082
+  registry:
+    address: nacos://127.0.0.1:8848
+    timeout: 10000
+
 yuapi:
   client:
     access-key: yupi
