--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>api-back</module>
         <module>yuapi-client-sdk</module>
         <module>api-gateway</module>
+        <module>api-common</module>
     </modules>
 
     <properties>
